--- a/src/position_controller/src/position_controller/params.yaml
+++ b/src/position_controller/src/position_controller/params.yaml
@@ -14,7 +14,7 @@ params:
     read_only: true
     var_name: ctrl_angular_err_gain_
 
-  ctrl_angular_pos_precision:
+  ctrl_angular_precision:
     type: double
     default_value: 0.0
     min_value: 0.0
